Do if not zero length

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Create SSH key
         run: |
-          if [ -z ${{ secrets.DEFAULT_USER }} ];
+          if [ -n ${DEFAULT_USER} ];
           then
             mkdir -p ~/.ssh/
             echo "$PROD_SSHKEY" > ~/.ssh/private.key
