--- a/meltano/cfp-pipeline/meltano.yml
+++ b/meltano/cfp-pipeline/meltano.yml
@@ -18,17 +18,21 @@ plugins:
   - name: tap-slack
     namespace: tap_slack
     variant: singer-io
-    pip_url: tap-slack
+    pip_url: git+https://github.com/dherbst/tap-slack.git@cfp-main
     executable: tap-slack
     capabilities:
     - catalog
     - discover
     - state
+    select:
+      - users.*
+      # - channels.*
     config:
+      disable_collection: true
       token: $TAP_SLACK_TOKEN
-      start_date: '2021-01-08T00:00:00'
+      start_date: '2020-01-08T00:00:00Z'
       private_channels: false
-      join_public_channels: true
+      join_public_channels: false
       exclude_archived: true
   loaders:
   - name: target-csv
