--- a/meltano/cfp-pipeline/meltano.yml
+++ b/meltano/cfp-pipeline/meltano.yml
@@ -24,6 +24,8 @@ plugins:
     - catalog
     - discover
     - state
+    select:
+      - users.profile.!email
     config:
       token: $TAP_SLACK_TOKEN
       start_date: '2021-01-08T00:00:00Z'
